face it logo dimensions added

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         <!-- Faceit -->
         <li class="job-listings-item">
-          <img class="job-listings-logo" src="images/job-listings-company-images/face-it.png" alt="Faceit" 
+          <img class="job-listings-logo job-listings-logo-wide" src="images/job-listings-company-images/face-it.png" alt="Faceit" 
           srcset="images/job-listings-company-images/face-it.png 1x,
             images/job-listings-company-images/face-it@2x.png 2x">
           <div class="job-listings-info">
