styles prefixed and minified

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>Job listings</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="css/minified.css">
 
 </head>
 
